# collision_benchmark

./: .gdbinit  CMakeLists.txt  package.xml  setup.py
benchmark/: benchmark.py  ik.py  ik_config.py  reach_config.py  robot.py  robot_config.py  run_benchmark.py  scenario.py  utils.py  visualization.py
collision_benchmark/: ik.py  robot.py  scenario.py
config/: benchmark.rviz  endo.urdf  hydrogen.pcd  hydrogen.ply  hydrogen.yaml  hydrogen_single.pcd  joint_limits.yaml  kinematics.yaml  planning.rviz  sample_params.yml  show_reach.rviz  table_mustard.urdf  tank.stl  tank_half.stl  tank_test.stl
include/collision_benchmark/: benchmark_ik_solver.h  bio_ik_goals.h  relaxed_ik_goals.h
launch/: benchmark.launch.py  importer.launch.py  panda.launch.py  reach_study_config.rviz  setup.launch.py  show_reach.launch.py  start.launch.py  visualization.launch.py
motion_bench_maker/bookshelf_tall_ur5/: path0001.yaml  path0002.yaml  path0003.yaml  path0004.yaml  path0005.yaml  path0006.yaml  path0007.yaml  path0008.yaml  path0009.yaml  path0010.yaml  path0011.yaml  path0012.yaml  path0013.yaml  path0014.yaml  path0015.yaml  path0016.yaml  path0017.yaml  path0018.yaml  path0019.yaml  path0020.yaml  path0021.yaml  path0022.yaml  path0023.yaml  path0024.yaml  path0025.yaml  path0026.yaml  path0027.yaml  path0028.yaml  path0029.yaml  path0030.yaml  path0031.yaml  path0032.yaml  path0033.yaml  path0034.yaml  path0035.yaml  path0036.yaml  path0037.yaml  path0038.yaml  path0039.yaml  path0040.yaml  (+360 more)
motion_bench_maker/box_ur5/: path0001.yaml  path0002.yaml  path0003.yaml  path0004.yaml  path0005.yaml  path0006.yaml  path0007.yaml  path0008.yaml  path0009.yaml  path0010.yaml  path0011.yaml  path0012.yaml  path0013.yaml  path0014.yaml  path0015.yaml  path0016.yaml  path0017.yaml  path0018.yaml  path0019.yaml  path0020.yaml  path0021.yaml  path0022.yaml  path0023.yaml  path0024.yaml  path0025.yaml  path0026.yaml  path0027.yaml  path0028.yaml  path0029.yaml  path0030.yaml  path0031.yaml  path0032.yaml  path0033.yaml  path0034.yaml  path0035.yaml  path0036.yaml  path0037.yaml  path0038.yaml  path0039.yaml  path0040.yaml  (+360 more)
scenarios/: empty.ply  hydrogen_tank.pcd  hydrogen_tank_big.pcd  hydrogen_tank_big.ply  hydrogen_tank_big_targets.ply  hydrogen_tank_small.pcd  hydrogen_tank_small.ply  hydrogen_tank_small_targets.ply  hydrogen_tank_targets.ply  kallax.pcd  kallax_targets.ply  square_tank.pcd  square_tank.ply  square_tank_targets.ply  test_entry.pcd  test_entry.ply  test_entry_10.pcd  test_entry_small.pcd  test_entry_small_targets.ply  test_entry_targets.ply  wing.pcd  wing.ply  wing_targets.ply
scripts/: plot_data.py  run_benchmark.py  run_optuna.py  run_optuna_bio_ik.py
src/: benchmark.cpp  benchmark.hpp  benchmark_ik_solver.cpp  benchmark_logger.cpp  benchmark_logger.hpp  benchmark_moveit_ik_solver.cpp  benchmark_moveit_ik_solver.hpp  benchmark_node.cpp  benchmark_visualizer.cpp  benchmark_visualizer.hpp  bio_ik_goals.cpp  motion_bench_maker_importer.cpp  planning_benchmark.cpp  planning_benchmark.hpp  plugins.cpp  reach_benchmark.cpp  reach_benchmark.hpp  reach_plugin.cpp  reachability_evaluator.cpp  reachability_evaluator.hpp  relaxed_ik_goals.cpp  test_plugin.cpp  utils.cpp  utils.hpp  yaml.cpp  yaml.hpp
