<?xml version="1.0"?>
<package format="2">
  <name>collision_benchmark</name>
  <version>1.0.0</version>
  <description>IK Benchmarking package for collision-rich environments</description>

  <maintainer email="timon.engelke@uni-hamburg.de">Timon Engelke</maintainer>
  <author email="timon.engelke@uni-hamburg.de">Timon Engelke</author>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_industrial_cmake_boilerplate</depend>
  <depend>ebike</depend>
  <depend>elise_decription</depend>
  <depend>elise_moveit_config</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
